--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
 <div class="background">
+
+
+
+
 <div class="header">
 
-  <div class="contact">
+  <div class="contact d-none d-xl-block d-lg-block">
     <a>       
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill " viewBox="0 0 16 16">
         <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
@@ -31,7 +35,7 @@
       + 1 5589 55488 55</a>
     </div>
 
-    <div class="button">
+    <div class="button d-none d-xl-block d-lg-block"">
         <button class="btn btn-warning " >Get Started</button>
     </div>
 </div>
@@ -56,10 +60,23 @@
     </div>
 </div>
     -->
+
+
+
+
+
+    <!-- Navbar "Working"
+
         <nav class="navbar navbar-expand-lg  navbar-custom">
             <a class="navbar-brand" href="#">ANYAR</a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler"
+             type="button" 
+             data-toggle="collapse" 
+             data-target="#navbarNavDropdown"
+             aria-controls="navbarNavDropdown" 
+             aria-expanded="false" 
+             aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
 
             </button>
@@ -96,6 +113,55 @@
               </ul>
             </div>
           </nav>
+!-->
+
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <a class="navbar-brand"><a class="navbar-brand-color">ANYAR</a></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Services</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" href="#">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Team</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blog</a>
+        </li>
+
+        <div class="dropdown">
+          <button class="btn dropdown-toggle btn-dropdown" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Drop down
+          </button>
+          <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">test</a>
+            <a class="dropdown-item" href="#">test</a>
+            <a class="dropdown-item" href="#">test</a>
+          </div>
+        </div>
+
+      <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+
+    </ul>
+  </div>
+</nav>
 
 
 
@@ -153,6 +219,8 @@
 
 <div class="ufc_place">
     <div class="row">
+
+
         <div class="card">
             <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-archive" viewBox="0 0 16 16">
                 <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
